# tiny-eval-sdk

./: README.md
prompt-eval-sdk/: README.md  pyproject.toml  requirements.txt  setup.py
prompt-eval-sdk/src/prompt_eval_sdk/: __init__.py  code_evaluator.prompty  code_evaluator.py  evaluation.py  evaluation_result.py  utils.py
prompt-eval-sdk/src/prompt_eval_sdk/.promptflow/code_evaluator/: flow.tools.json
prompt-eval-sdk/src/tests/: __init__.py  evaluation.ipynb  test_evaluation.py  test_utils.py
web-ui/: requirements.txt
web-ui/eval/: admin.py  models.py  urls.py  views.py
web-ui/eval/migrations/: 0001_initial.py
web-ui/eval/templates/: baseWithLogger.html  eval.html
web-ui/grid/: admin.py  models.py  urls.py  views.py
web-ui/grid/migrations/: 0001_initial.py  0002_auto_20250115_1132.py
web-ui/grid/templates/: baseWithLogger.html  grid_detail.html  table_view.html
web-ui/mysite/: settings.py  urls.py
web-ui/polls/: models.py
web-ui/polls/migrations/: 0001_initial.py  0002_auto_20250115_1132.py
